crates/pardosa/tests/ui/no_root_reader_module.rs
use pardosa::reader::EventLogReader;
fn main() {
    let _: Option<EventLogReader<std::io::Cursor<Vec<u8>>, u64>> = None;
}
